Redesign logic-path resolution; consolidate solver list behind SMT_TEST_SOLVERS
Utils.openLogicStream (SMT/src/org/smtlib/Utils.java): when logicPath is
set explicitly, validate every path component (split on File.pathSeparator,
same as the Java classpath) is a real directory before anything else -- a
mistyped component now fails loudly with "Invalid logic path: ... is not a
directory" instead of being silently treated as "not found here, try next".
If all components are valid but the specific file isn't among them, always
fall back to the classpath (versioned subfolder first, then top-level) --
an explicit path may deliberately override only some logics/theories (e.g.
loadLogic()'s unconditional load of the Core theory as an implicit
prerequisite of every logic, or SMTCommandLineTests/ScriptTests' use of a
temp directory holding only their own custom test files). This replaces an
earlier narrower "only Core gets the classpath backstop" attempt, which
still left one ScriptTests scenario failing because it needed QF_UF itself,
not just Core, to fall back. Updated LogicsBadPath.java's expected error
text to match (verified against both the V2.0 and V2.5+ quoting styles).

QuantTests.forallBoolUnSat: force V2.0 (with a comment explaining why) --
UF.smt2 only exists in the classpath's versioned V2.0/ subfolder, not the
current top-level V2.7 logic set, so it doesn't resolve at later configured
versions.

Consolidated three independent, out-of-sync solver lists (LogicTests.java's
hardcoded array, FileTests.java's separate SOLVERS array, runtests' own
shell default) behind one environment variable, SMT_TEST_SOLVERS (default
"test", the built-in pure-Java solver needing no external binary):
- LogicTests.solvers now reads and whitespace-splits SMT_TEST_SOLVERS.
- FileTests no longer declares its own SOLVERS array -- it already extends
  LogicTests, so it just uses the inherited field.
- runtests' solver default now comes from the same variable (the
  --solvers flag still ov